tests/NormalTests/paczka1/small_fuzzy/37245877.err
Error in line 1: CNz S981 82,6
Error in line 15: B45Z4Mulxh A881 -2,0
